--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Analytics Graphs</title>
+    <title>Survey Admin Analytics</title>
     <style>
        /* Reset some default styles for consistency */
 body, h1, p, ul, li {
@@ -79,11 +79,11 @@ a:hover {
         <h1>Analytics Graphs</h1>
         <p>Click on the links below to view the corresponding QuickSight graphs:</p>
         <ul>
-            <li><a href="https://your-quick-sight-link-1" class="button">Available Building</a></li>
-            <li><a href="https://your-quick-sight-link-2" class="button">Availability by Micromarket</a></li>
-            <li><a href="https://your-quick-sight-link-3" class="button">Number of Units Available</a></li>
-            <li><a href="https://your-quick-sight-link-4" class="button">Number of Buildings Available</a></li>
-            <li><a href="https://your-quick-sight-link-5" class="button">Types of Buildings</a></li>
+            <li><a href="https://ap-south-1.quicksight.aws.amazon.com/sn/accounts/955413563895/dashboards/849bbfd1-c87d-4252-a7c2-d857b6813408?directory_alias=repositree" class="button">Available Buildings Area</a></li>
+            <li><a href="https://ap-south-1.quicksight.aws.amazon.com/sn/accounts/955413563895/dashboards/849bbfd1-c87d-4252-a7c2-d857b6813408?directory_alias=repositree" class="button">Availability by Micromarket</a></li>
+            <li><a href="https://ap-south-1.quicksight.aws.amazon.com/sn/accounts/955413563895/dashboards/849bbfd1-c87d-4252-a7c2-d857b6813408?directory_alias=repositree" class="button">Number of Units Available</a></li>
+            <li><a href="https://ap-south-1.quicksight.aws.amazon.com/sn/accounts/955413563895/dashboards/849bbfd1-c87d-4252-a7c2-d857b6813408?directory_alias=repositree" class="button">Number of Buildings Available</a></li>
+            <li><a href="https://ap-south-1.quicksight.aws.amazon.com/sn/accounts/955413563895/dashboards/849bbfd1-c87d-4252-a7c2-d857b6813408?directory_alias=repositree" class="button">Types of Buildings</a></li>
         </ul>
     </div>
 </body>
